// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput should match snapshot when all props are defined 1`] = `
Array [
  <label
    className="sc-gueYoa ggGRkb"
  >
    Enter your name: 
  </label>,
  <input
    className="sc-beqWaB hoAMot"
    onChange={[Function]}
    type="text"
    value=""
  />,
]
`;

exports[`TextInput should match snapshot when only necessary props are defined 1`] = `
Array [
  <label
    className="sc-gueYoa ggGRkb"
  />,
  <input
    className="sc-beqWaB hoAMot"
    onChange={null}
    type="text"
    value=""
  />,
]
`;
